Enhance application with role-based access control and user management features
- Introduced AdminRoleGroupsBean and AdminRolesBean for managing role groups and roles.
- Added RbacProcedureBean for server-side RBAC checks.
- Implemented user registration and management with RegisterBean and AdminUsersBean.
- Created new entities and facades for roles and role groups, including soft delete functionality.
- Updated session filter to handle new admin routes and user permissions.
- Added new admin dashboard and sidebar for navigation.
- Included database migration scripts for role and role group setup.
- Updated login flow to redirect to the admin dashboard upon successful login.